--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
       font-size: 72px;
       }
       form {
-      background: rgba(0, 0, 0, 0.7); 
+      background: rgba(0, 0, 0, 0.7);
+      max-width: 600px;
       }
       .title {
       display: flex;
